--- a/frontend/src/app/main/ui/workspace/sidebar/layers.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layers.scss
@@ -130,10 +130,8 @@
     }
   }
   .active-filters {
-    display: flex;
-    align-items: center;
+    @include flexRow;
     flex-wrap: wrap;
-    gap: $s-4;
     margin: 0 $s-12;
     .layer-filter {
       @extend .button-tag;
