--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/constraints.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/constraints.scss
@@ -105,9 +105,7 @@
       }
     }
     .contraints-selects {
-      display: flex;
-      flex-direction: column;
-      gap: $s-4;
+      @include flexColumn;
 
       .horizontal-select,
       .vertical-select {
