--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -62,9 +62,7 @@
       margin-bottom: $s-12;
     }
     .forth-row {
-      display: flex;
-      flex-direction: column;
-      gap: $s-4;
+      @include flexColumn;
       .gap-group {
         display: flex;
         gap: $s-4;
