--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/align.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/align.scss
@@ -8,13 +8,11 @@
 
 .align-options {
   display: flex;
+  gap: $s-4;
   height: $s-32;
   margin: 0 calc(-1 * $s-2);
-  gap: $s-4;
   .align-group {
-    display: flex;
-    align-items: center;
-    gap: $s-4;
+    @include flexRow;
     .align-button {
       @extend .button-tertiary;
       height: $s-28;
