--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/blur.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/blur.scss
@@ -21,14 +21,10 @@
     }
   }
   .element-set-content {
-    display: flex;
-    flex-direction: column;
-    gap: $s-4;
+    @include flexColumn;
     margin-bottom: $s-4;
     .first-row {
-      display: flex;
-      align-items: center;
-      gap: $s-4;
+      @include flexRow;
       width: 100%;
       .blur-info {
         display: flex;
@@ -65,9 +61,7 @@
         }
       }
       .actions {
-        display: flex;
-        align-items: center;
-        gap: $s-4;
+        @include flexRow;
         .action-btn {
           @extend .button-tertiary;
           height: $s-32;
