--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
@@ -21,21 +21,15 @@
     }
   }
   .element-set-content {
-    display: flex;
-    flex-direction: column;
-    gap: $s-4;
+    @include flexColumn;
     margin-bottom: $s-4;
     .multiple-exports {
-      display: flex;
-      align-items: center;
-      gap: $s-4;
+      @include flexRow;
       .label {
         @extend .mixed-bar;
       }
       .actions {
-        display: flex;
-        align-items: center;
-        gap: $s-4;
+        @include flexRow;
         .action-btn {
           @extend .button-tertiary;
           height: $s-32;
@@ -47,13 +41,9 @@
       }
     }
     .element-group {
-      display: flex;
-      align-items: center;
-      gap: $s-4;
+      @include flexRow;
       .input-wrapper {
-        display: flex;
-        align-items: center;
-        gap: $s-4;
+        @include flexRow;
         .format-select {
           width: $s-60;
           padding: 0;
