--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/fill.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/fill.scss
@@ -25,9 +25,7 @@
     flex-direction: column;
     gap: $s-12;
     .element-set-options-group {
-      display: flex;
-      align-items: center;
-      gap: $s-4;
+      @include flexRow;
       .group-label {
         @extend .mixed-bar;
       }
