--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -19,9 +19,7 @@
     }
   }
   .flex-element-menu {
-    display: flex;
-    flex-direction: column;
-    gap: $s-4;
+    @include flexColumn;
     .first-row {
       display: flex;
       gap: $s-4;
@@ -111,9 +109,7 @@
     }
 
     .forth-row .advanced-options {
-      display: flex;
-      flex-direction: column;
-      gap: $s-4;
+      @include flexColumn;
       .horizontal-fill,
       .vertical-fill {
         display: flex;
