:lipstick: Update copy button to new UI in text attributes

--- a/frontend/src/app/main/ui/viewer/inspect/attributes/text.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/attributes/text.scss
@@ -19,6 +19,9 @@
     :global(.attr-value) {
       align-items: center;
     }
+    .button-children {
+      @extend .copy-button-children;
+    }
   }
   .attributes-content-row {
     width: $s-252;
