:sparkles: Hide asterisk for overriden copies, except when debugging

--- a/frontend/resources/styles/main/partials/sidebar-layers.scss
+++ b/frontend/resources/styles/main/partials/sidebar-layers.scss
@@ -274,6 +274,10 @@ span.element-name {
   }
 }
 
+span.element-name-touched {
+  color: $color-component;
+}
+
 .element-actions {
   display: flex;
   flex-shrink: 0;
