:sparkles: Add read-only pill to the workspace

--- a/frontend/resources/styles/main/partials/inspect.scss
+++ b/frontend/resources/styles/main/partials/inspect.scss
@@ -23,6 +23,11 @@
   padding: 0;
   cursor: pointer;
 
+  .code-block & {
+    visibility: visible;
+    opacity: 1;
+  }
+
   svg {
     width: 16px;
     height: 16px;
