--- a/frontend/resources/styles/main/partials/color-bullet.scss
+++ b/frontend/resources/styles/main/partials/color-bullet.scss
@@ -83,7 +83,7 @@ ul.palette-menu .color-bullet {
   margin-right: $size-1;
   width: 20px;
 }
-.asset-list .asset-list-item {
+.tool-window-content .asset-list .asset-list-item {
   &:hover {
     .color-bullet {
       border: 1px solid $color-primary;
